# cv_xiqing

./: README.md
1_pycharm_project/numpy_test/data/: float.npy  uint8.npy
1_pycharm_project/numpy_test/src/: numpy_data_test.py
1_pycharm_project/numpy_test/test/: init.py
3_opencv/: 11.main.out  3.main.out  4.main.out
3_opencv/1/: main  main.cpp
3_opencv/10/: 10.cpp  main
3_opencv/11/: 11.cpp  main
3_opencv/12/: 12.cpp  main
3_opencv/13/: 13.cpp
3_opencv/14/: 14.cpp
3_opencv/2/: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake
3_opencv/3/: 3.cpp  main
3_opencv/4/: 4.cpp  main
3_opencv/5/: 5.cpp  main
3_opencv/6/: 6.cpp  main
3_opencv/7/: 7.cpp  main
3_opencv/8/: 8.cpp  main
3_opencv/9/: 9.cpp  main
3_opencv/md/: opencv_w3c_c++.md
